fixed layout issues

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -3,6 +3,9 @@
   #sec1 {
     text-shadow: black 0.1em 0.1em 0.2em;
     color: #fff;
+    h1{
+      font-weight: bold;
+    }
 
     p {
       margin-top: 20px;
@@ -43,6 +46,7 @@
     h1{
       margin-top: 50px;
       margin-bottom: 20px;
+      font-weight: bold;
     }
 
     .container {
@@ -127,6 +131,9 @@
     line-height: 1.5em;
     text-align: center;
     font-size: 2.1rem;
+  }
+  .flick-title{
+    font-size: 35px;
   }
 }
 
@@ -224,6 +231,9 @@
         }
       }
   }
+  .bright{
+    background: #7fbbda url("home.jpg") no-repeat !important;
+  }
 }
 
 @media (max-width: 767px) {
@@ -254,6 +264,40 @@
           }
         }
       }
+      #sec1 {
+
+        p {
+          font-size: 1.5rem !important;
+        }
+        h1{
+          font-size: 3rem !important;
+        }
+      }
+    .bright{
+      background: #7fbbda url("home.jpg") no-repeat !important;
+    }
   }
+
+  .featurette {
+
+    h1{
+      font-size: 3rem;
+    }
+    .featurette-item {
+      .info{
+        h4{
+          font-size: 1.5rem !important;
+        }
+      }
+    }
+  }
+
+  .flickerplate ul.flicks > li .flick-sub-text {
+    font-size: 1.5rem !important;
+  }
+  .flick-title{
+    font-size: 3rem !important;
+  }
+
 }
 
